Bug 1779909 - Skip re-snapping during pan/touch gestures or scrollbar dragging. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D152229